--- a/app/src/main/res/layout/crowd_item.xml
+++ b/app/src/main/res/layout/crowd_item.xml
@@ -26,7 +26,7 @@
         <TextView
             android:id="@+id/person_name"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginStart="24dp"
             android:layout_toEndOf="@+id/person_photo"
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/person_name"
             android:layout_marginStart="8dp"
+            android:layout_marginBottom="6dp"
             android:layout_toEndOf="@+id/person_photo"
             app:layout_constraintBottom_toBottomOf="@+id/person_name"
             app:layout_constraintStart_toEndOf="@+id/person_name" />
