--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -27,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="16dp"
-            android:layout_toEndOf="@+id/product_photo"
+            android:layout_marginStart="60dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/product_photo"
             app:layout_constraintTop_toTopOf="@+id/product_photo" />
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="0dp"
             android:textSize="24sp"
             android:padding="16dp"
             android:text="@string/remove.icon"
